# VizdoomNCP-ROS2

./: _vizdoom.ini  main.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ViZDoom/share/ViZDoom/: package.bash  package.zsh
install/cv_bridge/share/cv_bridge/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/doomAI/doomAI/: utils.py
install/doomAI/lib/doomAI/: ai_node  state_node  visual_node  vizvisual_node
install/doomAI/share/doomAI/: package.dsv  package.ps1  package.sh
install/image_geometry/share/image_geometry/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh
install/opencv_tests/share/opencv_tests/: package.sh
install/vision_opencv/share/vision_opencv/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build  latest_list
src/: _vizdoom.ini
src/doomAI/: package.xml  setup.cfg  setup.py
src/doomAI/doomAI/: DoomNCPagent.py  NCP_1.5M_steps.json  vizdoom_ai.py  vizdoom_env.py  vizdoom_visual.py
src/doomAI/doomAI/ViZDoom/src/lib_python/: CMakeLists.txt
src/doomAI/doomAI/log/: latest_build
src/doomAI/doomAI/scripts/: preprocess  preprocess.py  utils.py  vizgym.py
src/doomAI/doomAI/weights/: NCP_steps.h5f.data-00000-of-00001  NCP_steps.h5f.index  RNN_steps.h5f.data-00000-of-00001  RNN_steps.h5f.index
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/doomAI/doomAI/: preprocess.py  vizgym.py
src/log/: latest_build
(+92 files in other folders)
