<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>doomAI</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="waleed@todo.todo">waleed</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>opencv2</depend>
  <depend>vizdoom</depend>
  <depend>Vizdoomgym</depend>
  <depend>numpy</depend>
  <depend>tensorflow</depend>
  <depend>keras-rl2</depend>
  <depend>kerasncp</depend>
  <depend>geometry_msgs</depend>
  <depend>matplotlib</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
